test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-oknil-borrowed.good
assign-oknil-unmanaged-from-oknil-borrowed.chpl:8: error: Cannot assign to unmanaged MyClass? from borrowed MyClass?
